MODIFY Community Post

--- a/src/main/resources/templates/community/editPost.html
+++ b/src/main/resources/templates/community/editPost.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout}">
 <head>
     <meta charset="UTF-8">
     <title>후기 수정</title>
@@ -10,58 +12,35 @@
 </head>
 <body>
 
-<div class="container">
-    <form action="post.html" th:action method="post">
-        <input type="hidden" name="page" th:value="${postPageRequestDTO.page}" value="1">
+<div layout:fragment="content">
+    <div class="container">
+        <form action="post.html" th:action method="post">
+            <input type="hidden" name="page" th:value="${postPageRequestDTO.page}" value="1">
 
-        <h4 class="head">후기 수정</h4>
-        <div class="buttons">
-            <button type="submit" class="btn btn-secondary btn-md">수정</button>
-            <button type="button" class="btn btn-secondary btn-md"
-                    onclick="location.href='posts.html'"
-                    th:onclick="|location.href='@{/community/{postNo}(postNo=${dto.postNo},page=${postPageRequestDTO.page},type=${postPageRequestDTO.type},keyword=${postPageRequestDTO.keyword})}'|">취소</button>
-            <!--<button type="button" class="btn btn-secondary btn-md"
-                    onclick="submitFormWithParam()"
-                    th:onclick="submitFormWithParam([[${dto.postNo}]], [[${postPageRequestDTO.page}]], , )">취소</button>
-                    &lt;!&ndash;th:onclick="[[|submitFormWithParam(${dto.postNo}, ${postPageRequestDTO.page}, ${postPageRequestDTO.type}, ${postPageRequestDTO.keyword})|]]">취소</button>&ndash;&gt;-->
-        </div>
-        <hr>
-        <div class="mb-3">
-            <input type="text" class="form-control-plaintext" name="hptName" th:value="|[${dto.hptName}]|" value="[병원명]" readonly>
-            <input type="text" class="form-control" name="title" th:value="${dto.title}" value="제목">
-        </div>
-        <div class="mb-3">
-            <textarea class="form-control" name="content" rows="15" th:text="${dto.content}">내용</textarea>
-        </div>
-    </form>
+            <h4 class="head">후기 수정</h4>
+            <div class="buttons">
+                <button type="submit" class="btn btn-secondary btn-md">수정</button>
+                <button type="button" class="btn btn-secondary btn-md cancelBtn"
+                        onclick="location.href='posts.html'"
+                        th:onclick="|location.href='@{/community/{postNo}(postNo=${dto.postNo},page=${postPageRequestDTO.page},type=${postPageRequestDTO.type},keyword=${postPageRequestDTO.keyword})}'|">
+                    취소
+                </button>
+                <!--<button type="button" class="btn btn-secondary btn-md"
+                        onclick="submitFormWithParam()"
+                        th:onclick="submitFormWithParam([[${dto.postNo}]], [[${postPageRequestDTO.page}]], [[${postPageRequestDTO.type}]], [[${postPageRequestDTO.keyword}]])">취소</button>
+                        &lt;!&ndash;th:onclick="submitFormWithParam([[${dto.postNo}]], [[${postPageRequestDTO.page}]], , )">취소</button>&ndash;&gt;-->
+            </div>
+            <hr>
+            <div class="mb-3">
+                <input type="text" class="form-control-plaintext" name="hptName" th:value="|[${dto.hptName}]|"
+                       value="[병원명]" readonly>
+                <input type="text" class="form-control" name="title" th:value="${dto.title}" value="제목">
+            </div>
+            <div class="mb-3">
+                <textarea class="form-control" name="content" rows="15" th:text="${dto.content}">내용</textarea>
+            </div>
+        </form>
+    </div>
 </div>
-
-<!--<script>
-    function submitFormWithParam() {
-        var postNo = arguments[0];
-        var page = arguments[1];
-        var type = arguments[2];
-        var keyword = arguments[3];
-
-        // Create a new form element
-        var form = document.createElement("form");
-        form.setAttribute("method", "POST");
-        form.setAttribute("action", "/cancel");
-
-        // Create a hidden input field for the parameter value
-        var input = document.createElement("input");
-        input.setAttribute("type", "hidden");
-        input.setAttribute("name", "hitCountNotChanged");
-        input.setAttribute("value", "true");
-
-        // Add the input field to the form
-        form.appendChild(input);
-
-        // Submit the form
-        document.body.appendChild(form);
-        form.submit();
-    }
-</script>-->
-
 </body>
 </html>
