--- a/src/main/resources/templates/community/posts.html
+++ b/src/main/resources/templates/community/posts.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout}">
 <head>
     <meta charset="UTF-8">
     <title>커뮤니티</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/community/posts.css}" href="../../css/community/posts.css">
     <link rel="stylesheet" th:href="@{/css/community/common.css}" href="../../css/community/common.css">
 </head>
+
 <body>
-<div class="container">
-    <table class="table table-striped">
-        <thead>
+<div layout:fragment="content">
+    <div class="container">
+        <table class="table table-striped">
+            <thead>
             <tr>
                 <th>No</th>
                 <th>병원명</th>
@@ -20,8 +24,8 @@
                 <th>등록일</th>
                 <th>조회수</th>
             </tr>
-        </thead>
-        <tbody>
+            </thead>
+            <tbody>
             <tr th:each="dto : ${result.dtoList}">
                 <td th:text="${dto.postNo}">게시글 번호</td>
                 <td th:text="${dto.hptName}">병원명</td>
@@ -34,50 +38,54 @@
                 <td th:text="${#temporals.format(dto.regDate, 'yyyy/MM/dd')}">작성일</td>
                 <td th:text="${dto.hit}">조회수</td>
             </tr>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
-    <!-- 페이징 -->
-    <ul class="pagination h-100 justify-content-center align-items-center">
-        <li class="page-item" th:if="${result.prev}">
-            <a class="page-link"
-               th:href="@{/community(page=${result.start - 1},
+        <!-- 페이징 -->
+        <ul class="pagination h-100 justify-content-center align-items-center">
+            <li class="page-item" th:if="${result.prev}">
+                <a class="page-link"
+                   th:href="@{/community(page=${result.start - 1},
                    type=${postPageRequestDTO.type},
                    keyword=${postPageRequestDTO.keyword})}" tabindex="-1">이전</a>
-        </li>
+            </li>
 
-        <li th:class="'page-item ' + ${result.currentPage == page ? 'active' : ''}"
-            th:each="page : ${result.pageList}">
-            <a class="page-link"
-               th:href="@{/community(page=${page},
+            <li th:class="'page-item ' + ${result.currentPage == page ? 'active' : ''}"
+                th:each="page : ${result.pageList}">
+                <a class="page-link"
+                   th:href="@{/community(page=${page},
                    type=${postPageRequestDTO.type},
                    keyword=${postPageRequestDTO.keyword})}">
-                [[${page}]]
-            </a>
-        </li>
+                    [[${page}]]
+                </a>
+            </li>
 
-        <li class="page-item" th:if="${result.next}">
-            <a class="page-link"
-               th:href="@{/community(page = ${result.end + 1},
+            <li class="page-item" th:if="${result.next}">
+                <a class="page-link"
+                   th:href="@{/community(page = ${result.end + 1},
                    type=${postPageRequestDTO.type},
                    keyword=${postPageRequestDTO.keyword})}">다음</a>
-        </li>
-    </ul>
-    <!-- 페이징 -->
+            </li>
+        </ul>
+        <!-- 페이징 -->
 
-    <!-- 검색 -->
-    <form>
-        <input type="hidden" name="page" value="1">
-        <select class="form-select" aria-label="Default select example" name="type">
-            <!--<option value="" th:selected="${postPageRequestDTO.type == null}">&#45;&#45;&#45;&#45;&#45;&#45;</option>-->
-            <option value="h" th:selected="${postPageRequestDTO.type == 'h' || postPageRequestDTO.type == null}">병원명</option>
-            <option value="t" th:selected="${postPageRequestDTO.type == 't'}">제목</option>
-            <option value="u" th:selected="${postPageRequestDTO.type == 'u'}">작성자</option>
-        </select>
-        <input type="text" class="form-control" name="keyword" th:value="${postPageRequestDTO.keyword}" placeholder="검색어를 입력하세요.">
-        <button type="submit" class="btn btn-secondary btn-sm">검색하기</button>
-    </form>
-    <!-- 검색 -->
+        <!-- 검색 -->
+        <form>
+            <input type="hidden" name="page" value="1">
+            <select class="form-select" aria-label="Default select example" name="type">
+                <!--<option value="" th:selected="${postPageRequestDTO.type == null}">&#45;&#45;&#45;&#45;&#45;&#45;</option>-->
+                <option value="h" th:selected="${postPageRequestDTO.type == 'h' || postPageRequestDTO.type == null}">
+                    병원명
+                </option>
+                <option value="t" th:selected="${postPageRequestDTO.type == 't'}">제목</option>
+                <option value="u" th:selected="${postPageRequestDTO.type == 'u'}">작성자</option>
+            </select>
+            <input type="text" class="form-control" name="keyword" th:value="${postPageRequestDTO.keyword}"
+                   placeholder="검색어를 입력하세요.">
+            <button type="submit" class="btn btn-secondary btn-sm">검색하기</button>
+        </form>
+        <!-- 검색 -->
+    </div>
 </div>
 </body>
 </html>
