develop branch merge

--- a/src/main/resources/templates/community/post.html
+++ b/src/main/resources/templates/community/post.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout}">
 <head>
     <meta charset="UTF-8">
     <title th:text="${dto.title}">후기 상세</title>
@@ -10,109 +12,119 @@
     <script th:src="@{/js/comment.js}"></script>
 </head>
 <body>
+<div layout:fragment="content">
+    <div class="container">
+        <h2 th:text="${message}"></h2>
 
-<div class="container">
-    <h2 th:text="${message}"></h2>
-
-    <div class="post">
-        <h2 class="post-title" th:text="|[${dto.hptName}] ${dto.title}|">[병원명] 제목</h2>
-        <p class="post-author" th:text="${dto.userEmail}">작성자 이메일 &nbsp;&nbsp;&nbsp;&nbsp;</p>
-        <span class="post-hits" th:text="|조회수 ${dto.hit}|">조회수 238</span>
-        <span class="post-registerDate" th:text="${#temporals.format(dto.regDate, 'yyyy/MM/dd HH:mm')}">23.4.4 화</span>
-        <hr>
-        <div class="post-content">
-            <p th:text="${dto.content}">내용</p>
-        </div>
-        <hr>
-
-        <form th:action="@{/community/report}" method="post">
-            <input type="hidden" name="postNo" th:value="${dto.postNo}">
-            <input type="hidden" name="page" th:value="${postPageRequestDTO.page}">
-            <input type="hidden" name="type" th:value="${postPageRequestDTO.type}">
-            <input type="hidden" name="keyword" th:value="${postPageRequestDTO.keyword}">
-
-            <div class="lbuttons">
-                <button type="submit" class="btn btn-secondary btn-sm" th:text="|신고 (${dto.report})|">신고</button>
+        <div class="post">
+            <h2 class="post-title" th:text="|[${dto.hptName}] ${dto.title}|">[병원명] 제목</h2>
+            <p class="post-author" th:text="${dto.userEmail}">작성자 이메일 &nbsp;&nbsp;&nbsp;&nbsp;</p>
+            <span class="post-hits" th:text="|조회수 ${dto.hit}|">조회수 238</span>
+            <span class="post-registerDate"
+                  th:text="${#temporals.format(dto.regDate, 'yyyy/MM/dd HH:mm')}">23.4.4 화</span>
+            <hr>
+            <div class="post-content">
+                <p th:text="${dto.content}">내용</p>
             </div>
-        </form>
-        <form th:action="@{/community/delete}" method="post">
-            <div class="rbuttons">
-                <button type="button" class="btn btn-secondary btn-sm"
-                        onclick="location.href='editPost.html'"
-                        th:onclick="|location.href='@{/community/{postNo}/edit(postNo=${dto.postNo},page=${postPageRequestDTO.page},type=${postPageRequestDTO.type},keyword=${postPageRequestDTO.keyword})}'|">
-                    수정
-                </button>
+            <hr>
 
+            <form th:action="@{/community/report}" method="post">
                 <input type="hidden" name="postNo" th:value="${dto.postNo}">
-                <button type="submit" class="btn btn-secondary btn-sm">삭제</button>
-            </div>
-        </form>
-        <br>
-        <br>
-        <br>
-        <br>
+                <input type="hidden" name="page" th:value="${postPageRequestDTO.page}">
+                <input type="hidden" name="type" th:value="${postPageRequestDTO.type}">
+                <input type="hidden" name="keyword" th:value="${postPageRequestDTO.keyword}">
+
+                <div class="lbuttons">
+                    <button type="submit" class="btn btn-secondary btn-sm" th:text="|신고 (${dto.report})|">신고</button>
+                </div>
+            </form>
+            <form th:action="@{/community/delete}" method="post">
+                <div class="rbuttons">
+                    <button type="button" class="btn btn-secondary btn-sm"
+                            onclick="location.href='editPost.html'"
+                            th:onclick="|location.href='@{/community/{postNo}/edit(postNo=${dto.postNo},page=${postPageRequestDTO.page},type=${postPageRequestDTO.type},keyword=${postPageRequestDTO.keyword})}'|">
+                        수정
+                    </button>
+
+                    <input type="hidden" name="postNo" th:value="${dto.postNo}">
+                    <button type="submit" class="btn btn-secondary btn-sm">삭제</button>
+                </div>
+            </form>
+            <br>
+            <br>
+            <br>
+            <br>
 
 
-        <!-- 댓글 -->
-        <th:block th:replace="~{/layout/basic :: setContent(~{this::content} )}">
-            <th:block th:fragment="content">
-                <div class="comment">
-                    <h4 class="comment-title">댓글<span class="comment-count" th:text="|(${dto.commentCount})|">(7)</span></h4>
-                    <h5><span class="badge badge-info addComment">댓글 등록하기</span></h5>
-                    <hr>
-                    <div class="commentList">
+            <!-- 댓글 -->
 
-                    </div>
+            <div class="comment">
+                <h4 class="comment-title">댓글<span class="comment-count"
+                                                  th:text="|(${dto.commentCount})|">(7)</span></h4>
+                <h5><span class="badge badge-info addComment">댓글 등록하기</span></h5>
+                <hr>
+                <div class="commentList">
 
-                    <hr>
+                </div>
 
-                    <div class="modal" tabindex="-1" role="dialog">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title">Modal title</h5>
+                <hr>
 
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true"></span>
-                                    </button>
+                <div class="modal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Modal title</h5>
+
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true"></span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="form-group">
+                                    <label>
+                                        <input class="form-control" type="text" name="commentContent"
+                                               placeholder="댓글을 입력해보세요.">
+                                        <input type="hidden" name="commNo">
+                                    </label>
                                 </div>
-                                <div class="modal-body">
-                                    <div class="form-group">
-                                        <label>
-                                            <input class="form-control"  type="text" name="commentContent" placeholder="댓글을 입력해보세요.">
-                                            <input type="hidden" name="commNo" >
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary btn-danger commentDelete">Remove</button>
-                                    <button type="button" class="btn btn-secondary btn-warning commentUpdate">Modify</button>
-                                    <button type="button" class="btn btn-secondary btn-primary commentSave">Save</button>
-                                    <button type="button" class="btn btn-secondary btn-outline-secondary commentClose" data-dismiss="modal">Close</button>
-                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary btn-danger commentDelete">
+                                    Remove
+                                </button>
+                                <button type="button" class="btn btn-secondary btn-warning commentUpdate">
+                                    Modify
+                                </button>
+                                <button type="button" class="btn btn-secondary btn-primary commentSave">Save
+                                </button>
+                                <button type="button"
+                                        class="btn btn-secondary btn-outline-secondary commentClose"
+                                        data-dismiss="modal">Close
+                                </button>
                             </div>
                         </div>
                     </div>
-
-                    <!--<form class="comment-form">
-                        <label for="comment-content"></label>
-                        <textarea id="comment-content" class="comment-content" rows="2" cols="60%" required
-                                  placeholder="댓글을 입력해보세요."></textarea> &nbsp;&nbsp;
-                        <button type="button" id="btn-comment-save" class="btn btn-secondary btn-sm"
-                                onclick="saveComment();">등록
-                        </button>
-                        <input type="hidden" id="postNo" th:value="${dto.postNo}"/>
-                    </form>-->
                 </div>
-                <hr>
 
-            </th:block>
-        </th:block>
-        <button type="button" class="btn btn-secondary btn-sm"
-                onclick="location.href='posts.html'"
-                th:onclick="|location.href='@{/community(page=${pageRequestDTO.page},type=${pageRequestDTO.type},keyword=${pageRequestDTO.keyword})}'|">
-            목록으로 돌아가기
-        </button>
+                <!--<form class="comment-form">
+                    <label for="comment-content"></label>
+                    <textarea id="comment-content" class="comment-content" rows="2" cols="60%" required
+                              placeholder="댓글을 입력해보세요."></textarea> &nbsp;&nbsp;
+                    <button type="button" id="btn-comment-save" class="btn btn-secondary btn-sm"
+                            onclick="saveComment();">등록
+                    </button>
+                    <input type="hidden" id="postNo" th:value="${dto.postNo}"/>
+                </form>-->
+            </div>
+            <hr>
+
+
+            <button type="button" class="btn btn-secondary btn-sm"
+                    onclick="location.href='posts.html'"
+                    th:onclick="|location.href='@{/community(page=${pageRequestDTO.page},type=${pageRequestDTO.type},keyword=${pageRequestDTO.keyword})}'|">
+                목록으로 돌아가기
+            </button>
+        </div>
     </div>
 </div>
 </body>
