--- a/src/main/resources/templates/maps/maps1.html
+++ b/src/main/resources/templates/maps/maps1.html
@@ -7,88 +7,39 @@
 	<title>카카오맵 API</title>
 </head>
 <body>
-		<h1>카카오맵 검색 결과</h1>
-		<table border="1">
-			<thead>
-				<tr>
-					<th>id</th>
-					<th>repEmail</th>
-					<th>placeName</th>
-					<th>distance</th>
-					<th>placeUrl</th>
-					<th>categoryName</th>
-					<th>addressName</th>
-					<th>roadAddressName</th>
-					<th>phone</th>
-					<th>categoryGroupCode</th>
-					<th>categoryGroupName</th>
-					<th>x</th>
-					<th>y</th>
-				</tr>
-			</thead>
-			<tbody>
-			<tr th:each="doc : ${documents}">
-				<td th:text="${doc.id}"></td>
-				<td th:text="${doc.rep_Email}"></td>
-				<td th:text="${doc.place_name}"></td>
-				<td th:text="${doc.distance}"></td>
-				<td th:text="${doc.place_url}"></td>
-				<td th:text="${doc.category_name}"></td>
-				<td th:text="${doc.address_name}"></td>
-				<td th:text="${doc.road_address_name}"></td>
-				<td th:text="${doc.phone}"></td>
-				<td th:text="${doc.category_group_code}"></td>
-				<td th:text="${doc.category_group_name}"></td>
-				<td th:text="${doc.x}"></td>
-				<td th:text="${doc.y}"></td>
-			</tr>
-			<!--<tr>
-				<td>${documents.id}</td>
-				<td>${documents.rep_Email}</td>
-				<td>${documents.place_name}</td>
-				<td>${documents.distance}</td>
-				<td>${documents.place_url}</td>
-				<td>${documents.category_name}</td>
-				<td>${documents.address_name}</td>
-				<td>${documents.road_address_name}</td>
-				<td>${documents.phone}</td>
-				<td>${documents.category_group_code}</td>
-				<td>${documents.category_group_name}</td>
-				<td>${documents.x}</td>
-				<td>${documents.y}</td>
-			</tr>
-			</#list>-->
-			</tbody>
-		</table>
-
-		<script>
-			function getPost() {
-				$.ajax({
-					type: "GET",
-					url: "http://localhost/api",
-					data: {},
-					success: function (response) {
-						let rows = response['documents']['row']
-						for (let i = 0; i < rows.length; i++) {
-							let id = rows[i]['id']
-							let place_name = rows[i]['place_name']
-							let distance = rows[i]['distance']
-							let place_url = rows[i]['place_url']
-							let category_name = rows[i]['category_name']
-							let address_name = rows[i]['address_name']
-							let road_address_name = rows[i]['road_address_name']
-							let phone = rows[i]['phone']
-							let category_group_code = rows[i]['category_group_code']
-							let category_group_name = rows[i]['category_group_name']
-							let x = rows[i]['x']
-							let y = rows[i]['y']
-							console.log(id, place_name, distance, place_url, category_name, address_name, road_address_name,
-							phone, category_group_code, category_group_name, x, y)
-						}
-						console.log(response)
-					}
-				})
-			}
-		</script>
+	<div id="map" style="width:100%;height:800px;position:relative;overflow:hidden;"></div>
+	
+	<!-- 지도 표시와 services와 clusterer 라이브러리 불러오기 -->
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7c6d76e0c895a60f42aa8b0ef2c67d0a&libraries=services,clusterer"></script>
+	
+	<script>
+		
+		var markers = [];
+		
+		var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+				mapOption = {
+					center: new kakao.maps.LatLng(37.477640999999934, 126.95956799999973), // 지도의 중심좌표
+					level: 3 // 지도의 확대 레벨
+				};
+		
+		// 지도를 생성합니다
+		var map = new kakao.maps.Map(mapContainer, mapOption);
+		
+		const API_KEY = '0a931d3e53412cb779f034fc86ec4c96';
+		const keyword = '소아과'; // 검색할 키워드
+		const url = `https://dapi.kakao.com/v2/local/search/keyword.json?query=${keyword}&apikey=${API_KEY}`;
+		
+		$.ajax({
+			type: "GET",
+			url: "https://dapi.kakao.com/v2/local/search/keyword.json?query=" + keyword + "&" + "apikey=" + API_KEY,
+			dataType: "json",
+			data: {"key" : "value"},
+			contentType: "application/json",
+			success: function (query) {
+				console.log('통신결과');
+				console.log(query);
+			},
+		});
+	</script>
 </body>
 </html>
