--- a/src/main/resources/templates/users/signuphospital.html
+++ b/src/main/resources/templates/users/signuphospital.html
@@ -134,7 +134,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;비밀번호</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="repPassword" placeholder="비밀번호 입력">
+                    <input type="password" class="form-control" name="repPassword" placeholder="비밀번호 입력">
                 </div>
             </div>
 
@@ -143,7 +143,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;비밀번호 확인</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="confirmPassword" placeholder="비밀번호 다시 입력">
+                    <input type="password" class="form-control" name="confirmPassword" placeholder="비밀번호 다시 입력">
                 </div>
             </div>
 
