--- a/src/main/resources/templates/users/signupuser.html
+++ b/src/main/resources/templates/users/signupuser.html
@@ -136,7 +136,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;비밀번호</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="비밀번호 입력">
+                    <input type="password" class="form-control" name="title" placeholder="비밀번호 입력">
                 </div>
             </div>
 
@@ -145,7 +145,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;비밀번호 확인</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="비밀번호 다시 입력">
+                    <input type="password" class="form-control" name="title" placeholder="비밀번호 다시 입력">
                 </div>
             </div>
 
