--- a/src/main/resources/templates/community/editPost.html
+++ b/src/main/resources/templates/community/editPost.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layouts/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>후기 수정</title>
+    <title th:text="${dto.title}">후기 수정</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/community/editPost.css}" href="../../css/community/editPost.css">
@@ -19,16 +19,8 @@
 
             <h4 class="head">후기 수정</h4>
             <div class="buttons">
-                <button type="submit" class="btn btn-secondary btn-md">수정</button>
-                <button type="button" class="btn btn-secondary btn-md cancelBtn"
-                        onclick="location.href='posts.html'"
-                        th:onclick="|location.href='@{/community/{postNo}(postNo=${dto.postNo},page=${postPageRequestDTO.page},type=${postPageRequestDTO.type},keyword=${postPageRequestDTO.keyword})}'|">
-                    취소
-                </button>
-                <!--<button type="button" class="btn btn-secondary btn-md"
-                        onclick="submitFormWithParam()"
-                        th:onclick="submitFormWithParam([[${dto.postNo}]], [[${postPageRequestDTO.page}]], [[${postPageRequestDTO.type}]], [[${postPageRequestDTO.keyword}]])">취소</button>
-                        &lt;!&ndash;th:onclick="submitFormWithParam([[${dto.postNo}]], [[${postPageRequestDTO.page}]], , )">취소</button>&ndash;&gt;-->
+                <button type="button" class="btn btn-secondary btn-md editBtn">수정</button>
+                <button type="button" class="btn btn-secondary btn-md cancelBtn">취소</button>
             </div>
             <hr>
             <div class="mb-3">
@@ -41,6 +33,42 @@
             </div>
         </form>
     </div>
+
+    <script th:inline="javascript">
+        var actionForm = $("form");
+
+        $(".editBtn").click(function() {
+
+            if(!confirm("게시글을 수정하시겠습니까?")){
+                return ;
+            }
+
+            actionForm
+                .attr("method","post")
+                .submit();
+        });
+
+        $(".cancelBtn").click(function() {
+
+            if(!confirm("게시글 수정을 취소하시겠습니까?")){
+                return;
+            }
+
+            var postNo = [[${dto.postNo}]];
+
+            actionForm.empty();
+
+            actionForm.append('<input type="hidden" name="page" value=[[${postPageRequestDTO.page}]]>'); //목록 페이지 이동에 필요한 내용을 다시 추가
+            actionForm.append('<input type="hidden" name="type" value=[[${postPageRequestDTO.type}]]>');
+            actionForm.append('<input type="hidden" name="keyword" value=[[${postPageRequestDTO.keyword}]]>');
+
+            actionForm
+                .attr("action", "/community/" + postNo)
+                .attr("method", "get");
+
+            actionForm.submit();
+        })
+    </script>
 </div>
 </body>
 </html>
