--- a/src/main/resources/static/css/community/posts.css
+++ b/src/main/resources/static/css/community/posts.css
@@ -1,3 +1,14 @@
+.fs-4 {
+    color: skyblue;
+}
+
+.container {
+    max-width: 800px;
+    margin: 10px auto;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
 table {
     margin-top: 10px;
 }
