--- a/src/main/resources/templates/community/writePost.html
+++ b/src/main/resources/templates/community/writePost.html
@@ -15,8 +15,8 @@
 
 <div layout:fragment="content">
     <div class="container">
-        <form action="post.html" th:action method="post">
-            <input type="hidden" name="userId" th:value="${userId}">
+        <form action="post.html" th:action="@{/community/write}" method="post">
+            <input type="hidden" name="userId" th:value="1">
             <input type="hidden" name="resNo" th:value="${resNo}">
 
             <h4 class="head">후기 작성</h4>
@@ -28,10 +28,10 @@
                 </button>
             </div>
             <hr>
-            <!--<input type="text" class="form-control-plaintext" name="hptName" th:value="|[${dto.hptName}]|"
-                   value="[병원명]" readonly>-->
+            <input type="text" class="form-control-plaintext" name="hptName" th:value="|[${hptName}]|"
+                   value="[병원명]" readonly>
             <div class="mb-3">
-                <input type="text" class="form-control" name="title" placeholder="제목을 입력하세요.">
+                <input type="text" class="form-control" name="title" placeholder="제목을 입력하세요." required>
             </div>
             <div class="mb-3">
                 <textarea class="form-control" name="content" rows="15" placeholder="내용을 입력하세요."></textarea>
