--- a/src/main/resources/static/css/community/posts.css
+++ b/src/main/resources/static/css/community/posts.css
@@ -2,6 +2,10 @@ table {
     margin-top: 10px;
 }
 
+.fs-4{
+    color: skyblue;
+}
+
 .table-striped>tbody>tr:nth-child(odd)>td,
 .table-striped>tbody>tr:nth-child(odd)>th {
     background-color: #deebf7;
