--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,7 +12,7 @@
 	<header class="py-3 mb-4 border-bottom">
 		<div class="container d-flex flex-wrap justify-content-center">
 			<a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none">
-				<svg class="bi me-2" width="40" height="32"><use xlink:href="/maps"/></svg>
+				<svg class="bi me-2" width="40" height="32"><use xlink:href="/"/></svg>
 				<span class="fs-4">iHealMe</span>
 			</a>
 			<ul class="nav">
