로그인 및 회원가입 처리(90%) & View 데이터 통신 문제 해결(ing)

--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -80,7 +80,7 @@
 <body>
     <div class="container">
         <h2>i Heal Me : Login</h2>
-        <form action="/login" method="post">
+        <form th:action="@{/login}" method="post">
             <div class="input-group">
                 <label>Email</label>
                 <input type="email" name="email" required>
