--- a/src/main/resources/templates/users/signupuser.html
+++ b/src/main/resources/templates/users/signupuser.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -68,115 +67,119 @@
 </style>
 
 <body>
-    <div class="container">
-        <form action="join" method="post">
-            <h2 class="head">유저 회원가입</h2>
-            <hr>
+<div class="container">
+    <form th:action="@{/registeruser}" method="post" id="registerUser">
+        <h2 class="head">유저 회원가입</h2>
+        <hr>
+        <div class="row">
+            <div class="col">
+                <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;이름</h5>
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" name="name" id="name" placeholder="이름 입력">
+            </div>
+        </div>
+
+        <form action="emailchk" method="post">
             <div class="row">
                 <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;이름</h5>
+                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;이메일</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="이름 입력">
-                </div>
-            </div>
-
-            <form action="emailchk" method="post">
-                <div class="row">
-                    <div class="col">
-                        <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;이메일</h5>
-                    </div>
-                    <div class="col">
-                        <div class="input-group">
-                            <div class="size">
-                                <input type="email" class="form-control" name="title" placeholder="이메일 입력">
-                                &emsp;
-                            </div>
-                            <div class="input-group-append">
-                                <button type="submit" class="btn btn-secondary btn-md">중복검사</button>
-                            </div>
+                    <div class="input-group">
+                        <div class="size">
+                            <input type="email" class="form-control" name="email" id="email"
+                                   placeholder="이메일 입력">
+                            &emsp;
                         </div>
+                        <!--                        <div class="input-group-append">-->
+                        <!--                            <button type="submit" class="btn btn-secondary btn-md">중복검사</button>-->
+                        <!--                        </div>-->
                     </div>
                 </div>
-            </form>
-
-            <div class="row">
-                <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;연락처</h5>
-                </div>
-                <div class="col">
-                    <input type="number" class="form-control" name="title" placeholder="연락처 입력(하이픈(-) 제외)">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;생년월일</h5>
-                </div>
-                <div class="col">
-                    <input type="number" class="form-control" name="title" placeholder="생년월일 입력(ex.20020625)">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;성별</h5>
-                </div>
-                <div class="col">
-                    <select class="form-control" name="title">
-                        <option value="" disabled selected>여기를 클릭하세요.</option>
-                        <option value="1">남자</option>
-                        <option value="2">여자</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;비밀번호</h5>
-                </div>
-                <div class="col">
-                    <input type="password" class="form-control" name="title" placeholder="비밀번호 입력">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;비밀번호 확인</h5>
-                </div>
-                <div class="col">
-                    <input type="password" class="form-control" name="title" placeholder="비밀번호 다시 입력">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;보안 질문</h5>
-                </div>
-                <div class="col">
-                    <select class="form-control" name="title">
-                        <option value="" disabled selected>여기를 클릭하세요.</option>
-                        <option value="1">질문1</option>
-                        <option value="2">질문2</option>
-                        <option value="3">질문3</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;답변</h5>
-                </div>
-                <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="질문 답 입력">
-                </div>
-            </div>
-
-            <div class="buttons">
-                <button type="submit" class="btn btn-secondary btn-lg">회원가입</button>
             </div>
         </form>
-    </div>
+
+        <div class="row">
+            <div class="col">
+                <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;연락처</h5>
+            </div>
+            <div class="col">
+                <input type="number" class="form-control" name="phoneNum" id="phoneNum"
+                       placeholder="연락처 입력(하이픈(-) 제외)">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;생년월일</h5>
+            </div>
+            <div class="col">
+                <input type="number" class="form-control" name="birthDate" id="birthDate"
+                       placeholder="생년월일 입력(ex.20020625)">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;성별</h5>
+            </div>
+            <div class="col">
+                <select class="form-control" name="gender" id="gender">
+                    <option value="" disabled selected>여기를 클릭하세요.</option>
+                    <option value="1">남자</option>
+                    <option value="2">여자</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;비밀번호</h5>
+            </div>
+            <div class="col">
+                <input type="password" class="form-control" name="password" id="password"
+                       placeholder="비밀번호 입력">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;비밀번호 확인</h5>
+            </div>
+            <div class="col">
+                <input type="password" class="form-control" name="confirmPassword" id="confirmPassword"
+                       placeholder="비밀번호 다시 입력">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;보안 질문</h5>
+            </div>
+            <div class="col">
+                <select class="form-control" name="question" id="question">
+                    <option value="" disabled selected>여기를 클릭하세요.</option>
+                    <option value="1">질문1</option>
+                    <option value="2">질문2</option>
+                    <option value="3">질문3</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;답변</h5>
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" name="answer" id="answer" placeholder="질문 답 입력">
+            </div>
+        </div>
+        <div class="buttons">
+            <button type="submit" class="btn btn-secondary btn-lg register" form="registerUser">회원가입</button>
+        </div>
+    </form>
+</div>
 </body>
 
 </html>
