modified user reservation

--- a/src/main/resources/static/css/reservationStyle.css
+++ b/src/main/resources/static/css/reservationStyle.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+/*.table-striped>tbody>tr:nth-child(odd)>td,*/
+/*.table-striped>tbody>tr:nth-child(odd)>th {*/
+/*	background-color: #deebf7;*/
+/*}*/
+
 body {
 	font-family: Arial, sans-serif;
 	margin: 0;
