--- a/src/main/resources/templates/reservation/userReservation.html
+++ b/src/main/resources/templates/reservation/userReservation.html
@@ -32,7 +32,8 @@
                             <td th:text="${reservationInfo.currentStatus}"></td>
                             <td>
                                 <a th:if="${reservationInfo.currentStatus == '진료 전'}" th:href="@{/userResCancelUpdate(resNo=${reservationInfo.resNo})}" onclick="return cancelReservation()">취소 하기</a>
-                                <a th:if="${reservationInfo.currentStatus == '진료 완료'}" th:href="@{/community/write}">후기 작성</a>
+                                <a th:if="${reservationInfo.currentStatus == '진료 완료'}"
+                                   th:href="@{/community/write(resNo=${reservationInfo.resNo}, name=${reservationInfo.name})}">후기 작성</a>
                             </td>
 
                 </tr>
