--- a/src/main/resources/static/css/reservationStyle.css
+++ b/src/main/resources/static/css/reservationStyle.css
@@ -5,6 +5,20 @@
 /*	background-color: #deebf7;*/
 /*}*/
 
+nav {
+  width: 100%;
+  height: 57px;
+  display: flex;
+  align-items: center;
+}
+
+header {
+  width: 100%;
+  height: 73px;
+  display: flex;
+  align-items: center;
+}
+
 body {
 	font-family: Arial, sans-serif;
 	margin: 0;
